# OpenLR2

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  En_dbio.cpp  En_dbio.h  LR2_ghost.cpp  LR2_replay.cpp  LR2_skindraw.cpp  LR2f.cpp  LR2f.h  LR2input.cpp  Main.cpp  OpenLR2.sln  OpenLR2_vs22.vcxproj  README.md  Scene04_Play.cpp  new_command(skin).md  structure.h  vcpkg-configuration.json  vcpkg.json
ExampleIR/: .editorconfig  ExternalIR.cpp
LR2/: En_audio.cpp  En_audio.h  En_dbio.cpp  En_dbio.h  En_dxlibstub.h  En_fileutil.cpp  En_fileutil.h  En_graphic.cpp  En_graphic.h  En_input.cpp  En_recordmovie.cpp  En_recordmovie.h  En_timer.cpp  En_timer.h  En_value.h  En_xml.cpp  En_xml.h  Engine.h  LR2.h  LR2_audio.cpp  LR2_audio.h  LR2_bmsload.cpp  LR2_bmsload.h  LR2_configsave.cpp  LR2_configsave.h  LR2_customir.cpp  LR2_customir.h  LR2_customir_api.h  LR2_gameloop.cpp  LR2_gameloop.h  LR2_ghost.cpp  LR2_ghost.h  LR2_ir.cpp  LR2_ir.h  LR2_makemp3.cpp  LR2_makemp3.h  LR2_replay.cpp  LR2_replay.h  LR2_skindraw.cpp  LR2_skindraw.h  (+40 more)
OpcodeScript/: buttonOp.txt  numberOP.txt  textOp.txt
SkinEditor/: skin.cpp  winWorkspace.cpp  winWorkspace.h
dep/: .editorconfig
dep/DxLib/: DxASyncLoad.cpp  DxASyncLoad.h  DxArchive_.cpp  DxArchive_.h  DxBaseFunc.cpp  DxBaseFunc.h  DxBaseImage.cpp  DxBaseImage.h  DxChar.cpp  DxChar.h  DxCharCodeTable.cpp  DxCompileConfig.h  DxDataTypeAndroid.h  DxDataTypeiOS.h  DxFile.cpp  DxFile.h  DxFont.cpp  DxFont.h  DxFunctionAndroid.h  DxGateway.cpp  DxGraphics.cpp  DxGraphics.h  DxGraphicsFilter.cpp  DxGraphicsFilter.h  DxHandle.cpp  DxHandle.h  DxHeap.cpp  DxHeap.h  DxInput.cpp  DxInput.h  DxInputString.cpp  DxInputString.h  DxLib.h  DxLive2DCubism4.cpp  DxLive2DCubism4.h  DxLog.cpp  DxLog.h  DxLog.txt  DxMask.cpp  DxMask.h  (+49 more)
dep/DxLib/Android/: DxBaseFuncAndroid.cpp  DxBaseFuncAndroid.h  DxBaseImageAndroid.cpp  DxBaseImageAndroid.h  DxFileAndroid.cpp  DxFileAndroid.h  DxFontAndroid.cpp  DxFontAndroid.h  DxGraphicsAndroid.h  DxGraphicsFilterAndroid.cpp  DxGraphicsFilterAndroid.h  DxInputAndroid.cpp  DxInputAndroid.h  DxJavaAndroid.cpp  DxJavaAndroid.h  DxLive2DCubism4Android.cpp  DxLive2DCubism4Android.h  DxLogAndroid.cpp  DxLogAndroid.h  DxMaskAndroid.cpp  DxMaskAndroid.h  DxMemoryAndroid.cpp  DxMemoryAndroid.h  DxModelAndroid.cpp  DxModelAndroid.h  DxMovieAndroid.cpp  DxMovieAndroid.h  DxNetworkAndroid.cpp  DxNetworkAndroid.h  DxShaderCodeBin_Base3D_Android.cpp  DxShaderCodeBin_Base_Android.cpp  DxShaderCodeBin_Filter_Android.cpp  DxShaderCodeBin_Live2D_Cubism4_Android.cpp  DxShaderCodeBin_Model_Android.cpp  DxShaderCodeBin_RgbaMix_Android.cpp  DxSoundAndroid.cpp  DxSoundAndroid.h  DxSoundConvertAndroid.cpp  DxSoundConvertAndroid.h  DxSystemAndroid.cpp  (+5 more)
dep/DxLib/Shader/Android/: FragmentShader.h
dep/DxLib/Shader/Android/Base/: Base_Tex.flag  Base_Tex_Blend.flag
dep/DxLib/Shader/Windows/Direct3D11/: DataType.h  PixelShader.h  VertexShader.h
dep/DxLib/Shader/Windows/Direct3D11/Filter/: CRT_Geom.hlsl
dep/DxLib/Shader/Windows/Direct3D11/MV1DefaultShader/: MV1Default_PixelLighting_PS.hlsl
dep/DxLib/Shader/Windows/Direct3D9/: PixelLighting_PS.h  PixelLighting_VS.h  VertexLighting_PS.h  VertexLighting_VS.h
dep/DxLib/Shader/Windows/Direct3D9/Filter/: CRT_Geom.hlsl
dep/DxLib/Shader/Windows/Direct3D9/MV1DefaultShader/: MV1Default_PixelLighting_PS.fx
dep/DxLib/Windows/: DxBaseFuncWin.cpp  DxBaseFuncWin.h  DxBaseImageWin.cpp  DxBaseImageWin.h  DxDirectX.h  DxFileWin.cpp  DxFileWin.h  DxFontWin.cpp  DxFontWin.h  DxGraphicsAPIWin.cpp  DxGraphicsAPIWin.h  DxGraphicsD3D11.cpp  DxGraphicsD3D11.h  DxGraphicsD3D9.cpp  DxGraphicsD3D9.h  DxGraphicsFilterD3D11.cpp  DxGraphicsFilterD3D11.h  DxGraphicsFilterD3D9.cpp  DxGraphicsFilterD3D9.h  DxGraphicsFilterWin.cpp  DxGraphicsFilterWin.h  DxGraphicsWin.cpp  DxGraphicsWin.h  DxGuid.cpp  DxGuid.h  DxInputWin.cpp  DxInputWin.h  DxKeyHook.c  DxKeyHookBinary.cpp  DxLive2DCubism4Win.cpp  DxLive2DCubism4Win.h  DxLogWin.cpp  DxLogWin.h  DxMaskD3D11.cpp  DxMaskD3D11.h  DxMaskD3D9.cpp  DxMaskD3D9.h  DxMaskWin.cpp  DxMaskWin.h  DxMemoryWin.cpp  (+50 more)
dep/DxLib/iOS/: DxLive2DCubism4iOS.cpp  DxLive2DCubism4iOS.h  DxShaderCodeBin_Live2D_Cubism4_iOS.cpp
dep/dxlib-for-linux/DxLib/: Makefile
vcxproj/: DxLib.vcxproj  DxLib.vcxproj.filters  OpenLR2.vcxproj  OpenLR2.vcxproj.filters  fmod.vcxproj  md5_lib.vcxproj  md5_lib.vcxproj.filters  sqlite3_lib.vcxproj  sqlite3_lib.vcxproj.filters  tinyxml_lib.vcxproj  tinyxml_lib.vcxproj.filters
